@startuml

    entity usuario{
        *ID:int
        nombreU:varchar
        nombreP:varchar
        apellidoP:varchar
        contrasenia:varchar
        clavePublica:varchar
        clavePrivada:varchar
    }

    entity sesion{
        *ID:int
        fecha:datetime
        estado:enum("abierta","cerrada")
    }
    entity inicia{

    }

    usuario "1" --> inicia
    inicia "n" --> sesion

@enduml